core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@malformed_demo.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Failed to parse diplomat::demo
In src/ast/snapshots/span_testing/malformed_demo.rs:3:22:
...demo(123)]...
        ^^^
expected identifier
